--- a/style.css
+++ b/style.css
@@ -94,3 +94,28 @@ h1 {
     font-size: 13px;
   }
 }
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 1.3em;
+    padding: 10px;
+  }
+
+  #tree-container {
+    padding: 20px;
+  }
+
+  .node {
+    font-size: 16px;
+    padding: 14px 18px;
+    min-width: 170px;
+    margin: 12px;
+  }
+
+  .children {
+    margin-left: 40px;
+  }
+
+  #tree-wrapper {
+    padding-bottom: 14px;
+  }
+}
